# ccsearch

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
benches/: search_bench.rs
src/: claude.rs  cli.rs  config.rs  lib.rs  main.rs  model.rs
src/db/: mod.rs  queries.rs  schema.rs
src/indexer/: embedder.rs  mod.rs  parser.rs  tokenizer.rs
src/search/: bm25.rs  mod.rs  rrf.rs  vector.rs
src/tui/: mod.rs  picker.rs  theme.rs
tests/: integration.rs
tests/fixtures/: sample-session-2.jsonl  sample-session-3.jsonl  sample-session.jsonl  sessions-index.json
tests/integration/: test_indexer.rs  test_rrf.rs  test_search.rs
