[package]
name = "ccsearch"
version = "0.1.0"
edition = "2021"
description = "Hybrid search CLI for Claude Code chat sessions (BM25 + vector embeddings + RRF)"
license = "MIT"
repository = "https://github.com/example/ccsearch"
keywords = ["claude", "search", "cli", "tui", "embeddings"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Search
bm25 = "2.3"

# Embeddings
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
ndarray = "0.16"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
zerocopy = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
dirs = "6"
glob = "0.3"

# HTTP (for model download)
ureq = "2"

# Progress / Display
indicatif = "0.17"
colored = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Unicode
unicode-segmentation = "1.11"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "search_bench"
harness = false
